Prepare end-to-end test environment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,7 @@
 
 // bootstrap utilities
 @import 'bootstrap/scss/utilities/position';
+@import 'bootstrap/scss/utilities/spacing';
 
 // local CSS
 @import 'setup';
