--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -14,10 +14,10 @@
 
 .experience {
   .arrowpart {
-    background: asset_url('arrow-left.png') no-repeat 0 23px;
+    background: asset_url('arrow-left-light.png') no-repeat 0 23px;
 
     @media screen and (max-width: 767px) {
-      background: asset_url('arrow-top.png') no-repeat 50% 100%;
+      background: asset_url('arrow-top-light.png') no-repeat 50% 100%;
     }
   }
 }
