--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,9 @@
 @import 'bootstrap/scss/navbar';
 
 // bootstrap utilities
+@import 'bootstrap/scss/utilities/align';
 @import 'bootstrap/scss/utilities/position';
+@import 'bootstrap/scss/utilities/spacing';
 
 // local CSS
 @import 'setup';
