--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -14,10 +14,10 @@
 
 .experience {
   .arrowpart {
-    background: asset_url('arrow-left.png') no-repeat 0 23px;
+    background: asset_url('arrow-left-light.png') no-repeat 0 23px;
 
     @media screen and (max-width: 767px) {
-      background: asset_url('arrow-top.png') no-repeat 50% 100%;
+      background: asset_url('arrow-top-light.png') no-repeat 50% 100%;
     }
   }
 }
@@ -28,4 +28,46 @@
 
 .skill-bg {
   background: asset_url('skills.png') no-repeat 0 0;
+}
+
+.banner {
+  .banner-part {
+    .banner-img {
+      background: asset_url('banner-small.jpg') no-repeat 0 0;
+
+      &.visible {
+        @media screen and (min-width: 420px) and (max-width: 767px) {
+          background: asset_url('banner-medium.jpg') no-repeat 0 0;
+        }
+
+        @media screen and (min-width: 768px) and (max-width: 1023px) {
+          background: asset_url('banner-large.jpg') no-repeat 0 0;
+        }
+
+        @media screen and (min-width: 1024px) {
+          background: asset_url('banner.jpg') no-repeat 0 0;
+        }
+      }
+    }
+  }
+}
+
+.about-me {
+  .topmar {
+    background: asset_url('gmmcal-small.png') no-repeat 0 0;
+
+    &.visible {
+      @media screen and (min-width: 420px) and (max-width: 767px) {
+        background: asset_url('gmmcal-medium.png') no-repeat 0 0;
+      }
+
+      @media screen and (min-width: 768px) and (max-width: 1023px) {
+        background: asset_url('gmmcal-large.png') no-repeat 0 0;
+      }
+
+      @media screen and (min-width: 1024px) {
+        background: asset_url('gmmcal.png') no-repeat 0 0;
+      }
+    }
+  }
 }
