Add fields to forms

--- a/app/views/admin/about/_form.html.erb
+++ b/app/views/admin/about/_form.html.erb
@@ -5,6 +5,13 @@
 
   <div class="form-inputs">
     <%= f.input :job_title %>
+    <%= f.input :description %>
+    <%= f.input :cv %>
+    <%= f.input :city %>
+    <%= f.input :country %>
+    <%= f.input :phone_number %>
+    <%= f.input :email %>
+    <%= f.input :locale, as: :hidden %>
   </div>
 
   <div class="form-actions">
