--- a/app/views/admin/educations/_form.html.erb
+++ b/app/views/admin/educations/_form.html.erb
@@ -5,6 +5,10 @@
 
   <div class="form-inputs">
     <%= f.input :course %>
+    <%= f.input :institution %>
+    <%= f.input :description %>
+    <%= f.input :start_date %>
+    <%= f.input :locale, as: :hidden %>
   </div>
 
   <div class="form-actions">
