--- a/app/views/admin/skills/_form.html.erb
+++ b/app/views/admin/skills/_form.html.erb
@@ -5,6 +5,8 @@
 
   <div class="form-inputs">
     <%= f.input :name %>
+    <%= f.input :value %>
+    <%= f.input :locale, as: :hidden %>
   </div>
 
   <div class="form-actions">
