--- a/app/views/admin/work_experiences/_form.html.erb
+++ b/app/views/admin/work_experiences/_form.html.erb
@@ -5,6 +5,12 @@
 
   <div class="form-inputs">
     <%= f.input :company_name %>
+    <%= f.input :position %>
+    <%= f.input :city %>
+    <%= f.input :country %>
+    <%= f.input :start_date %>
+    <%= f.input :description %>
+    <%= f.input :locale, as: :hidden %>
   </div>
 
   <div class="form-actions">
