--- a/app/views/admin/about/index.html.erb
+++ b/app/views/admin/about/index.html.erb
@@ -27,6 +27,7 @@
           <td><%= link_to about.job_title, [:edit, :admin, about] %></td>
           <td><%= locale_to_language(about.locale) %></td>
           <td>
+            <%= link_to t(:show), [:admin, about], class: 'btn btn-sm btn-primary' %>
             <%= link_to t(:edit), [:edit, :admin, about], class: 'btn btn-sm btn-primary' %>
             <%= link_to t(:destroy), [:admin, about], class: 'btn btn-sm btn-danger', method: :delete, data: { confirm: 'Are you sure?' } %>
           </td>
