--- a/app/views/admin/skills/index.html.erb
+++ b/app/views/admin/skills/index.html.erb
@@ -27,6 +27,7 @@
           <td><%= link_to skill.name, [:edit, :admin, skill] %></td>
           <td><%= locale_to_language(skill.locale) %></td>
           <td>
+            <%= link_to t(:show), [:admin, skill], class: 'btn btn-sm btn-primary' %>
             <%= link_to t(:edit), [:edit, :admin, skill], class: 'btn btn-sm btn-primary' %>
             <%= link_to t(:destroy), [:admin, skill], class: 'btn btn-sm btn-danger', method: :delete, data: { confirm: 'Are you sure?' } %>
           </td>
