--- a/app/views/admin/skills/index.html.erb
+++ b/app/views/admin/skills/index.html.erb
@@ -16,7 +16,7 @@
     <thead>
       <tr>
         <th>Name</th>
-        <th>Language</th>
+        <th>Translations?</th>
         <th></th>
       </tr>
     </thead>
@@ -25,7 +25,7 @@
       <% @skills.each do |skill| %>
         <tr>
           <td><%= link_to skill.name, [:edit, :admin, skill] %></td>
-          <td><%= locale_to_language(skill.locale) %></td>
+          <td><%= t skill.translations? %></td>
           <td>
             <%= link_to t(:show), [:admin, skill], class: 'btn btn-sm btn-primary' %>
             <%= link_to t(:edit), [:edit, :admin, skill], class: 'btn btn-sm btn-primary' %>
