Add pundit to handle authorization on CMS

--- a/app/views/admin/about/_tabs.html.erb
+++ b/app/views/admin/about/_tabs.html.erb
@@ -2,7 +2,9 @@
   <li class="nav-item">
     <%= link_to 'English', [:admin, :abouts, locale: :en], class: 'nav-link active' %>
   </li>
-  <li class="nav-item">
+  <% if policy(@about).translate? %>
+    <li class="nav-item">
       <%= link_to 'Portuguese', [:admin, :abouts, locale: :'pt-BR'], class: 'nav-link' %>
-  </li>
+    </li>
+  <% end %>
 </ul>
