--- a/app/views/admin/about/_tabs.html.erb
+++ b/app/views/admin/about/_tabs.html.erb
@@ -2,7 +2,7 @@
   <li class="nav-item">
     <%= link_to 'English', [:admin, :abouts, locale: :en], class: 'nav-link active' %>
   </li>
-  <% if policy(@about).translate? %>
+  <% if policy(about).translate? %>
     <li class="nav-item">
       <%= link_to 'Portuguese', [:admin, :abouts, locale: :'pt-BR'], class: 'nav-link' %>
     </li>
