--- a/app/views/admin/educations/_form.html.erb
+++ b/app/views/admin/educations/_form.html.erb
@@ -8,7 +8,7 @@
     <%= f.input :institution %>
     <%= f.input :description %>
     <%= f.input :start_date %>
-    <%= f.input :locale, as: :hidden %>
+    <%= f.input :locale %>
   </div>
 
   <div class="form-actions">
