--- a/app/views/admin/work_experiences/_form.html.erb
+++ b/app/views/admin/work_experiences/_form.html.erb
@@ -10,7 +10,7 @@
     <%= f.input :country %>
     <%= f.input :start_date %>
     <%= f.input :description %>
-    <%= f.input :locale, as: :hidden %>
+    <%= f.input :locale %>
   </div>
 
   <div class="form-actions">
