--- a/app/views/admin/about/index.html.erb
+++ b/app/views/admin/about/index.html.erb
@@ -2,7 +2,11 @@
   <h1 class="h2">About</h1>
 </div>
 
-<%= render 'tabs', about: @about %>
+<div>
+  <p id="notice"><%= notice %></p>
+</div>
+
+<%= render 'tabs' %>
 <% if @about.persisted? %>
   <%= render 'detail', about: @about %>
 <% else %>
