--- a/app/views/admin/skills/_form.html.erb
+++ b/app/views/admin/skills/_form.html.erb
@@ -6,7 +6,7 @@
   <div class="form-inputs">
     <%= f.input :name %>
     <%= f.input :value %>
-    <%= f.input :locale, as: :hidden %>
+    <%= f.input :locale %>
   </div>
 
   <div class="form-actions">
