Start organization of admin UI

--- a/app/views/admin/about/_about.html.erb
+++ b/app/views/admin/about/_about.html.erb
@@ -1,4 +1,4 @@
-<div class="list-group">
+<div class="list-group pt-3">
   <div class="list-group-item list-group-item-action flex-column align-items-start">
     <div class="d-flex justify-content-between pb-2 pt-2">
       <h5 class="mb-1"><%= about.job_title %></h5>
