--- a/app/views/admin/about/index.html.erb
+++ b/app/views/admin/about/index.html.erb
@@ -8,7 +8,7 @@
 
 <%= render 'tabs' %>
 <% if @about.persisted? %>
-  <%= render 'detail', about: @about %>
+  <%= render 'about', about: @about %>
 <% else %>
   <%= render 'form', about: @about %>
 <% end %>
