--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -46,9 +46,8 @@
           </ul>
         </div>
       </nav>
-      <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-          <%= yield %>
-        </div>
+      <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4 pb-3">
+        <%= yield %>
       </main>
     </div>
   </div>
