Handle menu/tabs active classes

--- a/app/views/admin/about/index.html.erb
+++ b/app/views/admin/about/index.html.erb
@@ -6,7 +6,8 @@
   <p id="notice"><%= notice %></p>
 </div>
 
-<%= render 'tabs' %>
+<%= render 'admin/shared/tabs', action: :abouts %>
+
 <% if @about.persisted? %>
   <%= render 'about', about: @about %>
 <% else %>
