--- a/app/views/admin/work_experiences/index.html.erb
+++ b/app/views/admin/work_experiences/index.html.erb
@@ -11,7 +11,7 @@
   <p id="notice"><%= notice %></p>
 </div>
 
-<%= render 'tabs' %>
+<%= render 'admin/shared/tabs', action: :work_experiences %>
 
 <div class="row pt-3">
   <%= render @work_experiences %>
