Add user action to update it's own data

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -43,6 +43,9 @@
             <li class="nav-item">
               <%= link_to 'Work Experiences', [:admin, :work_experiences], class: menu_classes(:work_experiences) %>
             </li>
+            <li class="nav-item">
+              <%= link_to 'Profile', [:edit, :admin, :user], class: menu_classes(:user) %>
+            </li>
           </ul>
         </div>
       </nav>
