--- a/app/views/admin/educations/_form.html.erb
+++ b/app/views/admin/educations/_form.html.erb
@@ -8,6 +8,7 @@
     <%= f.input :institution %>
     <%= f.input :description %>
     <%= f.input :start_date %>
+    <%= f.input :end_date %>
     <%= f.input :locale %>
   </div>
 
