--- a/app/views/admin/user/edit.html.erb
+++ b/app/views/admin/user/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-  <h1 class="h2">Editing <%= @user.first_name %></h1>
+  <h1 class="h2"><%= t(:edit, scope: %i[helpers]) %> <%= @user.first_name %></h1>
 </div>
 
 <div>
