--- a/app/views/admin/about/edit.html.erb
+++ b/app/views/admin/about/edit.html.erb
@@ -1,8 +1,8 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-  <h1 class="h2">Editing <%= @about.job_title %></h1>
+  <h1 class="h2"><%= t(:edit, scope: %i[helpers]) %> <%= @about.job_title %></h1>
   <div class="btn-toolbar mb-2 mb-md-0">
     <div class="btn-group mr-2">
-      <%= link_to 'Back', [:admin, :abouts], class: 'btn btn-sm btn-outline-secondary' %>
+      <%= link_to t(:back, scope: %i[helpers]), %i[admin abouts], class: 'btn btn-sm btn-outline-secondary' %>
     </div>
   </div>
 </div>
