--- a/app/views/admin/about/index.html.erb
+++ b/app/views/admin/about/index.html.erb
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-  <h1 class="h2">About</h1>
+  <h1 class="h2"><%= About.model_name.human %></h1>
 </div>
 
 <div>
