--- a/app/views/admin/educations/_education.html.erb
+++ b/app/views/admin/educations/_education.html.erb
@@ -5,8 +5,8 @@
       <small><%= l education.start_date %><br /><%= end_date(education.end_date) %></small>
       <div class="btn-toolbar mb-2 mb-md-0">
         <div class="btn-group">
-          <%= link_to t(:edit), [:edit, :admin, education], class: 'btn btn-primary btn-sm btn-outline-secondary' %>
-          <%= link_to t(:destroy), [:admin, education], class: 'btn btn-primary btn-sm btn-danger', method: :delete, data: { confirm: 'Are you sure?' } %>
+          <%= link_to t(:edit, scope: %i[helpers]), [:edit, :admin, education], class: 'btn btn-primary btn-sm btn-outline-secondary' %>
+          <%= link_to t(:delete, scope: %i[helpers]), [:admin, education], class: 'btn btn-primary btn-sm btn-danger', method: :delete, data: { confirm: 'Are you sure?' } %>
         </div>
       </div>
     </div>
