--- a/app/views/admin/skills/_skill.html.erb
+++ b/app/views/admin/skills/_skill.html.erb
@@ -4,8 +4,8 @@
       <h5 class="mb-1"><%= skill.name %></h5>
       <div class="btn-toolbar mb-2 mb-md-0">
         <div class="btn-group">
-          <%= link_to t(:edit), [:edit, :admin, skill], class: 'btn btn-primary btn-sm btn-outline-secondary' %>
-          <%= link_to t(:destroy), [:admin, skill], class: 'btn btn-primary btn-sm btn-danger', method: :delete, data: { confirm: 'Are you sure?' } %>
+          <%= link_to t(:edit, scope: %i[helpers]), [:edit, :admin, skill], class: 'btn btn-primary btn-sm btn-outline-secondary' %>
+          <%= link_to t(:delete, scope: %i[helpers]), [:admin, skill], class: 'btn btn-primary btn-sm btn-danger', method: :delete, data: { confirm: 'Are you sure?' } %>
         </div>
       </div>
     </div>
