--- a/app/views/admin/work_experiences/_work_experience.html.erb
+++ b/app/views/admin/work_experiences/_work_experience.html.erb
@@ -5,14 +5,14 @@
       <small><%= l work_experience.start_date %><br /><%= end_date(work_experience.end_date) %></small>
       <div class="btn-toolbar mb-2 mb-md-0">
         <div class="btn-group">
-          <%= link_to t(:edit), [:edit, :admin, work_experience], class: 'btn btn-primary btn-sm btn-outline-secondary' %>
-          <%= link_to t(:destroy), [:admin, work_experience], class: 'btn btn-primary btn-sm btn-danger', method: :delete, data: { confirm: 'Are you sure?' } %>
+          <%= link_to t(:edit, scope: %i[helpers]), [:edit, :admin, work_experience], class: 'btn btn-primary btn-sm btn-outline-secondary' %>
+          <%= link_to t(:delete, scope: %i[helpers]), [:admin, work_experience], class: 'btn btn-primary btn-sm btn-danger', method: :delete, data: { confirm: 'Are you sure?' } %>
         </div>
       </div>
     </div>
     <%= markdown work_experience.description %>
-    <small class="d-block pb-1">Position: <%= work_experience.position %></small>
-    <small class="d-block pb-1">City: <%= work_experience.city %></small>
-    <small class="d-block pb-1">Country: <%= country_name(work_experience.country) %></small>
+    <small class="d-block pb-1"><%= About.human_attribute_name(:position) %>: <%= work_experience.position %></small>
+    <small class="d-block pb-1"><%= About.human_attribute_name(:city) %>: <%= work_experience.city %></small>
+    <small class="d-block pb-1"><%= About.human_attribute_name(:country) %>: <%= country_name(work_experience.country) %></small>
   </div>
 </div>
