--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Gustavo Cunha - Software Engineer</title>
+  <title><%= t(:title, scope: %i[helpers]) %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--google font style-->
   <!--font-family: 'Open Sans', sans-serif;-->
@@ -14,7 +14,7 @@
 <body>
   <header>
     <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-      <a class="navbar-brand col-sm-12 col-md-12 mr-0" href="#">Company name</a>
+      <%= link_to t(:header, scope: %i[helpers]), root_path, class: 'navbar-brand col-sm-12 col-md-12 mr-0' %>
     </nav>
   </header>
   <div class="container-fluid">
