--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -18,8 +18,8 @@
     </nav>
   </header>
   <div class="container-fluid">
-    <div class="row">
-      <main role="main" class="col-md-12 ml-sm-auto col-lg-12">
+    <div class="row justify-content-center">
+      <main role="main" class="col-md-6 col-lg-6">
         <%= yield %>
       </main>
     </div>
