--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -14,7 +14,7 @@
 <body>
   <header>
     <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-      <%= link_to t(:header, scope: %i[helpers]), root_path, class: 'navbar-brand col-sm-12 col-md-12 mr-0' %>
+      <%= link_to t(:header, scope: %i[helpers]), root_path, class: 'navbar-brand col-12' %>
     </nav>
   </header>
   <div class="container-fluid">
