--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--google font style-->
   <!--font-family: 'Open Sans', sans-serif;-->
-  <%= javascript_include_tag 'admin/application' %>
+  <%= javascript_pack_tag 'admin/application', type: 'application/javascript' %>
   <%= stylesheet_link_tag 'admin/application', media: 'all', rel: 'stylesheet' %>
   <%= csrf_meta_tags %>
 </head>
