Add charts to dashboard

--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -5,3 +5,22 @@
 <div>
   <p id="notice"><%= notice %></p>
 </div>
+
+<div class="dashboard row">
+  <div class="col-md-6 pt-3 bg-light">
+    <h2><%= About.model_name.human %></h2>
+    <canvas id="about"></canvas>
+  </div>
+  <div class="col-md-6 pt-3">
+    <h2><%= Education.model_name.human %></h2>
+    <canvas id="educations"></canvas>
+  </div>
+  <div class="col-md-6 pt-3">
+    <h2><%= Skill.model_name.human %></h2>
+    <canvas id="skills"></canvas>
+  </div>
+  <div class="col-md-6 pt-3 bg-light">
+    <h2><%= WorkExperience.model_name.human %></h2>
+    <canvas id="work_experiences"></canvas>
+  </div>
+</div>
