--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
+    <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0">
       <%= link_to t(:header, scope: %i[helpers]), root_path, class: 'navbar-brand col-12' %>
     </nav>
   </header>
