Apply bootstrap material design to admin and fix ESLint and SCSSLint issues

--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 <div class="dashboard row">
-  <div class="col-md-6 pt-3 bg-light">
+  <div class="col-md-6 pt-3">
     <h2><%= About.model_name.human %></h2>
     <canvas id="about"></canvas>
   </div>
@@ -19,7 +19,7 @@
     <h2><%= Skill.model_name.human %></h2>
     <canvas id="skills"></canvas>
   </div>
-  <div class="col-md-6 pt-3 bg-light">
+  <div class="col-md-6 pt-3">
     <h2><%= WorkExperience.model_name.human %></h2>
     <canvas id="work_experiences"></canvas>
   </div>
