--- a/app/assets/stylesheets/admin/application.scss
+++ b/app/assets/stylesheets/admin/application.scss
@@ -1,51 +1,41 @@
-@import 'bootstrap/scss/bootstrap';
+@import 'bootstrap';
+@import 'mdb';
 
 body {
   font-size: .875rem;
 }
 
-/*
- * Sidebar
- */
-
 .sidebar {
+  bottom: 0;
+  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+  left: 0;
+  padding: 48px 0 0;
   position: fixed;
   top: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 100; /* Behind the navbar */
-  padding: 48px 0 0; /* Height of navbar */
-  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+  z-index: 100;
+}
 
-  .nav-link {
-    font-weight: 500;
-    color: #333;
-  }
+.sidebar, .navbar {
+  .nav-item {
+    .nav-link {
+      color: rgba(255, 255, 255, .75) !important;
+      font-weight: 500 !important;
 
-  .nav-link {
-    color: rgba(255, 255, 255, 0.75);
-
-    &.active {
-      color: rgba(255, 255, 255, 1.0);
-      text-decoration: underline;
+      &.active {
+        color: rgba(255, 255, 255, 1) !important;
+        text-decoration: underline !important;
+      }
     }
   }
 }
 
 .sidebar-sticky {
-  position: relative;
-  top: 0;
   height: calc(100vh - 48px);
-  padding-top: .5rem;
   overflow-x: hidden;
   overflow-y: auto;
-
-  @supports ((position: -webkit-sticky) or (position: sticky)) {
-    .sidebar-sticky {
-      position: -webkit-sticky;
-      position: sticky;
-    }
-  }
+  padding-top: .5rem;
+  position: relative;
+  top: 0;
 }
 
 .sidebar-heading {
@@ -53,23 +43,15 @@ body {
   text-transform: uppercase;
 }
 
-/*
- * Content
- */
-
 [role="main"] {
-  padding-top: 48px; /* Space for fixed navbar */
-  padding-bottom: 60px; /* Space for fixed footer */
+  padding-bottom: 60px;
+  padding-top: 48px;
 }
-
-/*
- * Navbar
- */
 
 .navbar {
   .navbar-brand {
-    padding: .75rem;
     font-size: 1rem;
+    padding: .75rem;
   }
 
   .navbar-nav {
@@ -77,11 +59,7 @@ body {
   }
 }
 
-/*
- * Footer
- */
-
 .footer {
-  height: 48px; /* Set the fixed height of the footer here */
-  line-height: 48px; /* Vertically center the text there */
+  height: 48px;
+  line-height: 48px;
 }
