--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title><%= t(:title, scope: %i[helpers]) %></title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--google font style-->
-  <!--font-family: 'Open Sans', sans-serif;-->
-  <%= stylesheet_link_tag 'admin/application', media: 'all', rel: 'stylesheet' %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-  <header>
-    <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0">
-      <%= link_to t(:header, scope: %i[helpers]), root_path, class: 'navbar-brand col-12' %>
-    </nav>
-  </header>
-  <div class="container-fluid">
-    <div class="row justify-content-center">
-      <main role="main" class="col-md-6 col-lg-6">
-        <%= yield %>
-      </main>
-    </div>
-  </div>
-  <footer class="footer fixed-bottom bg-dark text-white">
+<html lang="<%=I18n.locale%>">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title><%= t(:title, scope: %i[helpers]) %></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <%= stylesheet_link_tag 'admin/application', media: 'all', rel: 'stylesheet' %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
+    <header>
+      <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0">
+        <%= link_to t(:header, scope: %i[helpers]), root_path, class: 'navbar-brand col-12' %>
+      </nav>
+    </header>
     <div class="container-fluid">
-      &copy; <%= Date.today.year %> <%= t(:title, scope: %i[helpers]) %>
+      <div class="row justify-content-center">
+        <main role="main" class="col-md-6 col-lg-6">
+          <%= yield %>
+        </main>
+      </div>
     </div>
-  </footer>
-</body>
+    <footer class="footer fixed-bottom bg-dark text-white">
+      <div class="container-fluid">
+        &copy; <%= Date.today.year %> <%= t(:title, scope: %i[helpers]) %>
+      </div>
+    </footer>
+  </body>
 </html>
