Style messages and proper translate sign in message according to user locale

--- a/app/views/admin/educations/index.html.erb
+++ b/app/views/admin/educations/index.html.erb
@@ -7,9 +7,7 @@
   </div>
 </div>
 
-<div>
-  <p id="notice"><%= notice %></p>
-</div>
+<%= render 'admin/shared/notification' %>
 
 <%= render 'admin/shared/tabs', action: :educations %>
 
