--- a/app/views/admin/about/index.html.erb
+++ b/app/views/admin/about/index.html.erb
@@ -2,9 +2,7 @@
   <h1 class="h2"><%= About.model_name.human %></h1>
 </div>
 
-<div>
-  <p id="notice"><%= notice %></p>
-</div>
+<%= render 'admin/shared/notification' %>
 
 <%= render 'admin/shared/tabs', action: :abouts %>
 
