--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -17,6 +17,7 @@
     <div class="container-fluid">
       <div class="row justify-content-center">
         <main role="main" class="col-md-6 col-lg-6">
+          <%= render 'admin/shared/notification' %>
           <%= yield %>
         </main>
       </div>
