--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title><%= t(:title, scope: %i[helpers]) %></title>
+    <title><%= t(:title, scope: %i[frontend helpers]) %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <%= stylesheet_link_tag 'admin/application', media: 'all', rel: 'stylesheet' %>
     <%= csrf_meta_tags %>
@@ -11,7 +11,7 @@
   <body>
     <header>
       <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0">
-        <%= link_to t(:header, scope: %i[helpers]), root_path, class: 'navbar-brand col-12' %>
+        <%= link_to t(:header, scope: %i[frontend helpers]), root_path, class: 'navbar-brand col-12' %>
       </nav>
     </header>
     <div class="container-fluid">
