--- a/app/views/admin/skills/index.html.erb
+++ b/app/views/admin/skills/index.html.erb
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-  <h1 class="h2"><%= Skill.model_name.human %></h1>
+  <h1 class="h2"><%= Skill.model_name.human.pluralize %></h1>
   <div class="btn-toolbar mb-2 mb-md-0">
     <div class="btn-group mr-2">
       <%= link_to t(:new, scope: %i[helpers]), %i[new admin skill], class: 'btn btn-sm btn-outline-secondary' %>
