Add file upload for CV (only local upload for now)

--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -24,7 +24,7 @@
     </div>
     <footer class="footer fixed-bottom bg-dark text-white">
       <div class="container-fluid">
-        &copy; <%= Date.today.year %> <%= t(:title, scope: %i[helpers]) %>
+        &copy; <%= Date.today.year %> <%= t(:title, scope: %i[frontend helpers]) %>
       </div>
     </footer>
   </body>
