--- a/app/views/admin/about/_about.html.erb
+++ b/app/views/admin/about/_about.html.erb
@@ -5,7 +5,9 @@
       <div class="btn-toolbar mb-2 mb-md-0">
         <div class="btn-group">
           <%= link_to t(:edit, scope: %i[helpers]), [:edit, :admin, about], class: 'btn btn-primary btn-sm btn-outline-secondary' %>
-          <%= link_to t(:download_cv, scope: %i[helpers]), about.cv, class: 'btn btn-sm btn-outline-secondary', target: '_blank' %>
+          <% if about.cv.attached? %>
+            <%= link_to t(:download_cv, scope: %i[helpers]), about.cv, class: 'btn btn-sm btn-outline-secondary', target: '_blank' %>
+          <% end %>
         </div>
       </div>
     </div>
