Add missing field on work experience form

--- a/app/views/admin/work_experiences/_form.html.erb
+++ b/app/views/admin/work_experiences/_form.html.erb
@@ -9,6 +9,7 @@
     <%= f.input :city %>
     <%= f.input :country %>
     <%= f.input :start_date %>
+    <%= f.input :end_date %>
     <%= f.input :description %>
     <%= f.input :locale %>
   </div>
