--- a/app/views/application/_schema.html.erb
+++ b/app/views/application/_schema.html.erb
@@ -15,7 +15,7 @@
         <span itemprop="legalName"><%= experience.company_name %></span>
         <span itemprop="location" itemscope itemtype="https://schema.org/PostalAddress">
           <span itemprop="addressLocality"><%= experience.city %></span>
-          <span itemprop="addressCountry"><%= experience.country %></span>
+          <span itemprop="addressCountry"><%= experience.country_name %></span>
         </span>
       </div>
     <% end %>
