CSS tweak on items and add value to Skill box

--- a/app/views/admin/skills/_skill.html.erb
+++ b/app/views/admin/skills/_skill.html.erb
@@ -9,5 +9,6 @@
         </div>
       </div>
     </div>
+    <p><%= Skill.human_attribute_name(:value) %>: <%= skill.value %></p>
   </div>
 </div>
