Add end-to-end tests to CMS

--- a/app/views/admin/shared/_notification.html.erb
+++ b/app/views/admin/shared/_notification.html.erb
@@ -3,3 +3,9 @@
     <p class="alert alert-success"><%= notice %></p>
   </div>
 <% end %>
+
+<% if alert %>
+  <div>
+    <p class="alert alert-warning"><%= alert %></p>
+  </div>
+<% end %>
