--- a/app/views/admin/skills/_skill.html.erb
+++ b/app/views/admin/skills/_skill.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-6 pt-3">
+<div class="col-md-6 pt-3 item">
   <div class="list-group-item flex-column align-items-start">
     <div class="d-flex justify-content-between pb-2 pt-2">
       <h5 class="mb-1"><%= skill.name %></h5>
