--- a/app/views/admin/work_experiences/_form.html.erb
+++ b/app/views/admin/work_experiences/_form.html.erb
@@ -8,8 +8,8 @@
     <%= f.input :position %>
     <%= f.input :city %>
     <%= f.input :country %>
-    <%= f.input :start_date %>
-    <%= f.input :end_date %>
+    <%= f.input :start_date, include_blank: true %>
+    <%= f.input :end_date, include_blank: true %>
     <%= f.input :description %>
     <%= f.input :locale %>
   </div>
