--- a/app/views/admin/educations/_form.html.erb
+++ b/app/views/admin/educations/_form.html.erb
@@ -7,8 +7,8 @@
     <%= f.input :course %>
     <%= f.input :institution %>
     <%= f.input :description %>
-    <%= f.input :start_date %>
-    <%= f.input :end_date %>
+    <%= f.input :start_date, include_blank: true %>
+    <%= f.input :end_date, include_blank: true %>
     <%= f.input :locale %>
   </div>
 
