--- a/app/views/admin/user/_form.html.erb
+++ b/app/views/admin/user/_form.html.erb
@@ -1,12 +1,12 @@
 
-<%= simple_form_for([:admin, user], url: %i[admin user]) do |f| %>
+<%= simple_form_for([:admin, user], url: %i[admin user], html: { id: 'edit_user' }) do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">
     <%= f.input :first_name %>
     <%= f.input :last_name %>
-    <%= f.input :email %>
+    <%= f.input :email, required: true %>
     <%= f.input :default_locale %>
   </div>
 
